dodalismy Interface/IIstotaZywa.cs oraz CzyZyje

--- a/EkoSystem/EkoSystem.csproj
+++ b/EkoSystem/EkoSystem.csproj
@@ -45,7 +45,9 @@
     <Compile Include="EkoSystem.cs" />
     <Compile Include="Gatunek.cs" />
     <Compile Include="HierarchiaMrowek.cs" />
+    <Compile Include="Interface\IIstotaZywa.cs" />
     <Compile Include="Mrowka.cs" />
+    <Compile Include="Nietoperz.cs" />
     <Compile Include="Plec.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -55,6 +57,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
