--- a/Helpers/Helpers.csproj
+++ b/Helpers/Helpers.csproj
@@ -4,16 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5EC99FB3-300D-44CD-8DB3-A8E2FB5F3E53}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{DADFDA01-6156-4156-9633-2FF1B51E7558}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EkoSystem</RootNamespace>
-    <AssemblyName>EkoSystem</AssemblyName>
+    <RootNamespace>Helpers</RootNamespace>
+    <AssemblyName>Helpers</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -42,26 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EkoSystem.cs" />
-    <Compile Include="Zwierzeta\Gatunek.cs" />
-    <Compile Include="Zwierzeta\HierarchiaMrowek.cs" />
-    <Compile Include="Interface\IIstotaZywa.cs" />
-    <Compile Include="Zwierzeta\Mrowka.cs" />
-    <Compile Include="Zwierzeta\Nietoperz.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Helper.cs" />
+    <Compile Include="Enums\Imiona.cs" />
+    <Compile Include="Enums\Plec.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Surowce\SurowiecNaturalny.cs" />
-    <Compile Include="Zwierzeta\Wiewiorka.cs" />
-    <Compile Include="Zwierzeta\Zwierze.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Helpers\Helpers.csproj">
-      <Project>{DADFDA01-6156-4156-9633-2FF1B51E7558}</Project>
-      <Name>Helpers</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
